--- a/templates/invalidUserPassword.html
+++ b/templates/invalidUserPassword.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: url('https://www.ndr.de/fernsehen/screenshot1246032_v-fullhd.jpg') no-repeat center center fixed;
+      background: url('http://127.0.0.1:8000/static/3333.png') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       justify-content: center;
